tests/compile_fail/null_non_pointer.olrn
fn main() -> void
{
    inferred := null
    y :i64 = null
    x := 1
    x = null
}
